2012-02-13  Per Bothner  <per@bothner.com>

	* std_syntax.scm: Implement syntax->datum and datum->syntax.

2012-02-05  Per Bothner  <per@bothner.com>

	* lists.scm: Use #, and #,@ instead of , and ,@ in quasisyntax.
	* std_syntax.scm: Likewise.
	* misc_syntax.scm: Likewise.
	* prim_syntax.scm: Likewise.
	* syntax.scm: Likewise.

2012-01-31  Per Bothner  <per@bothner.com>

	* misc.scm (force*): New procedure.

2012-01-27  Per Bothner  <per@bothner.com>

	* misc.scm (promise-set-value!, promise-set-alias!,
	promise-set-exception!, promise-set-thunk!): New procedures.

2012-01-19  Per Bothner  <per@bothner.com>

	* lists.scm (pair?): Force operand.
	(list-tail): Re-implement in Scheme, instead of Java.
	Force operand as needed.

	* misc.scm (eager): Use keyword-inconstructor syntax.

	* std_syntax.scm (free-identifier=?): Re-implement to check that
	arguments are identifiers and then call new the new method
	SyntaxForms#identifierEquals.
	(bound-identifier=?): New function.

2012-01-17  Per Bothner  <per@bothner.com>

	* lists.scm (null?): Force operand before testing with eq?.

2012-01-15  Per Bothner  <per@bothner.com>

	* std_syntax.scm (lazy): New syntax, from SRFI-45 and R7RS.
	* misc.scm (force): Only calls force1, to match SRFI-45/R7RS.
	(eager): New function, from SRFI-45 and R7RS.

2012-01-01  Per Bothner  <per@bothner.com>

	* std_syntax.scm (delay): Use MakePromise:makePromise Procedure,
	so we can infer types better.

2011-12-19  Per Bothner  <per@bothner.com>

	* bytevector.scm: New file, for R7RS bytevector functions.

2011-11-27  Per Bothner  <per@bothner.com>

	* ports.scm (get-input-string, call-with-input-string): Update to
	use new string-input-port type.

2011-11-15  Per Bothner  <per@bothner.com>

	* std_syntax.scm (eval): New method.   Compile with full-tailcalls.

2011-10-08  Charles Turner  <chturne@gmail.com>

	* ports.scm (write, write-with-shared-structure): write was
	modified slightly for SRFI-38, write-w-s-s is a new procedure that